tests/harness/errors/087_bad_regex.eu
# Error: bad regex pattern - unclosed character class
x: "hello" str.matches?("[invalid")
